# backend/brain/src/main/java/net/spookly/kodama/brain/dto/LoginRequest.java
@@ -1,0 +1,18 @@
+package net.spookly.kodama.brain.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+
+@Getter
+@AllArgsConstructor
+@NoArgsConstructor
+public class LoginRequest {
+
+    @NotBlank
+    private String username;
+
+    @NotBlank
+    private String password;
+}
